--- a/Templates/class.html
+++ b/Templates/class.html
@@ -5,34 +5,34 @@
     <div class="form">
           <div class="tooltip">
             <img class="tooltip-icon" src="{{ url_for('static', filename='tooltip-icon.png') }}" />
-            <span class="tooltiptext">Need More Information?<br>Follow the link below to learn more about the different races.<br>http://dndroll.wikidot.com/races</span>
+            <span class="tooltiptext">Need More Information?<br>Follow the link below to learn more about the different classes.<br>http://dndroll.wikidot.com/classes</span>
           </div>
-          <h1>Select Your Race</h1>
-        <form id = 'race-form' method="POST">
-            {% for race in races %}
-                <div class="race-option">
+          <h1>Select Your Class</h1>
+        <form id = 'class-form' method="POST">
+            {% for class in classes %}
+                <div class="form-option">
                     <label>
-                        <input type="radio" name="race" value="{{ race.name }}"
-                            {% if selected == race.name %}checked{% endif %}>
-                        <strong>{{ race.name }}</strong>
+                        <input type="radio" name="class" value="{{ class.name }}"
+                            {% if selected == class.name %}checked{% endif %}>
+                        <strong>{{ class.name }}</strong>
                     </label>
-                    <div class="description">{{ race.description }}</div>
+                    <div class="description">{{ class.description }}</div>
                 </div>
             {% endfor %}
         </form>
     </div>
         <div class="back-button">
-          <a href="/">Go Back</a>
+          <a href="/race">Go Back</a>
         </div>
         <div>
-            <input class="next-button" type="submit" form="race-form" value="Go Forth"/>
+            <input class="next-button" type="submit" form="class-form" value="Go Forth"/>
         </div>
         <div class="start-over">
           <a onclick="confirm_start_over()" href="/">Start Over</a>
          <script>
           function confirm_start_over() {
-            let text;
-            if (confirm("Are you sure you want to start over?\nAll your previous selections will be lost.") == true) {
+            let text = "Are you sure you want to start over?\nAll your previous selections will be lost."
+            if (confirm(text)) {
               window.location.href = "/";
             }
           }
