--- a/Templates/race.html
+++ b/Templates/race.html
@@ -29,7 +29,7 @@
             <input class="next-button" type="submit" form="race-form" value="Go Forth"/>
         </div>
         <div class="start-over">
-          <a onclick="confirm_start_over()" href="/">Start Over</a>
+          <a onclick="confirm_start_over()">Start Over</a>
          <script>
           function confirm_start_over() {
             let text = "Are you sure you want to start over?\nAll your previous selections will be lost."
