--- a/static/style.css
+++ b/static/style.css
@@ -33,33 +33,15 @@ body {
   left: 50px;
 }
 
-.text-wrapper {
-  position: absolute;
-  top: -6px;
-  left: -5px;
-  text-shadow: 0px 21px 4px #00000040;
-  -webkit-text-stroke: 5px #000000;
-  font-family: "GothicByte", Helvetica;
-  font-weight: 500;
-  color: var(--variable-collection-text-fill-color);
-  font-size: 128px;
-  letter-spacing: 0;
-  line-height: normal;
-  white-space: nowrap;
-  box-shadow: var(--drop-shadow);
-}
-
 .create-new-button {
-  position: absolute;
-  top: 564px;
-  left: 643px;
-  width: 226px;
-  height: 75px;
-  padding: 8px 25px 15px 25px;
+  margin: auto;
+  width: 230px;
+  height: 90px;
+  padding: 8px 0 0 0;
   font-family: "GothicByte", Helvetica;
   font-weight: 500;
   color: #000000;
-  font-size: 28px;
+  font-size: 34px;
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
@@ -88,17 +70,16 @@ a {
 }
 
 .welcome-text {
-  position: absolute;
-  width: 589px;
-  height: 341px;
-  top: 214px;
-  left: 455px;
+  display: block;
+  margin: auto;
+  width: 40%;
+  padding: 60px 0 0 0;
 }
 
 .back-button {
   position: absolute;
   top: 520px;
-  left: 490px;
+  left: 470px;
   width: 226px;
   height: 75px;
   padding: 15px 25px;
@@ -134,7 +115,7 @@ a {
 .next-button {
   position: absolute;
   top: 520px;
-  left: 750px;
+  left: 730px;
   width: 226px;
   height: 75px;
   padding: 15px 25px;
@@ -171,8 +152,7 @@ a {
 .start-over {
   position: absolute;
   top: 620px;
-  left: 650px;
-  text-align: center;
+  left: 630px;
   font-family: "GothicByte", Helvetica;
   font-weight: 500;
   color: #F8EBCA;
@@ -193,7 +173,7 @@ a {
 
 .form {
   position: absolute;
-  left: 30.5%;
+  left: 29%;
 }
 
 form {
@@ -203,13 +183,15 @@ form {
 }
 
 .tooltip-icon {
-  width: 35px;
-  height: 35px
+  width: 30px;
+  height: 30px
 }
 
 .tooltip {
   float: right;
-  position: relative;
+  position: absolute;
+  right: 20px;
+  top: 0;
   display: inline-block;
 }
 
@@ -246,7 +228,6 @@ form {
 
 h1 {
   text-align: center;
-  top: 165px;
   font-family: "GothicByte", Helvetica;
   font-weight: 500;
   color: #F8EBCA;
@@ -287,17 +268,18 @@ h1 {
 }
 
 .name-box {
-  width: 580px;
-  height: 225px;
+  width: 550px;
+  height: 200px;
   margin: auto;
   display: table;
+  padding: 10px;
   text-align: center;
   font-family: "GothicByte";
   font-weight: 500;
   letter-spacing: 0;
   color: black;
   border-radius:15px;
-  border: 2px solid;
+  border: 3px solid;
   border-color: #000000;
   background: #F8EBCA;
   margin-bottom: 15px;
@@ -306,7 +288,7 @@ h1 {
 .name-span {
   display: table-cell;
   vertical-align: middle;
-  font-size: 85px;
+  font-size: 64px;
 }
 
 .name-intro {
@@ -364,7 +346,7 @@ h1 {
   letter-spacing: 0;
   color: black;
   border-radius:15px;
-  border: 2px solid;
+  border: 3px solid;
   border-color: #000000;
   background: #F8EBCA;
   margin-bottom: 20px;
