Added stats html, added more names to list, and changed some styling in multiple pages.

--- a/Templates/class.html
+++ b/Templates/class.html
@@ -5,10 +5,10 @@
     <div class="form">
           <div class="tooltip">
             <img class="tooltip-icon" src="{{ url_for('static', filename='tooltip-icon.png') }}" />
-            <span class="tooltiptext">Need More Information?<br>Follow the link below to learn more about the different classes.<br>http://dndroll.wikidot.com/classes</span>
+            <span class="tooltiptext">Need More Information? Follow <a href="http://dndroll.wikidot.com/classes">this link</a> to learn more about the different classes.</span>
           </div>
           <h1>Select Your Class</h1>
-        <form id = 'class-form' method="POST">
+        <form id = 'radio-form' method="POST">
             {% for class in classes %}
                 <div class="form-option">
                     <label>
@@ -25,7 +25,7 @@
           <a href="/race">Go Back</a>
         </div>
         <div>
-            <input class="next-button" type="submit" form="class-form" value="Go Forth"/>
+            <input class="next-button" type="submit" form="radio-form" value="Go Forth"/>
         </div>
         <div class="start-over">
           <a onclick="confirm_start_over()">Start Over</a>
