--- a/Templates/stat-roll.html
+++ b/Templates/stat-roll.html
@@ -12,7 +12,7 @@
             {% endif %}
         </div>
 
-        <div class="stat-form">
+        <div class="stat-roll-form">
             <input class="stat-button" type="submit" value="Roll The Dice" onclick="generate_stats()"/>
         </div>
 
