--- a/static/style.css
+++ b/static/style.css
@@ -449,3 +449,60 @@ h1 {
   left: 380px;
   width: 670px;
 }
+
+.character-sheet {
+    max-width: 600px;
+    height: 390px;
+    margin: auto;
+    background: #F8EBCA;
+    font-family: "GothicByte";
+    font-weight: 500;
+    font-size: 28px;
+    letter-spacing: 0;
+    color: black;
+    padding: 10px 30px;
+    border: 5px;
+    border-color: black;
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.5);
+    border-radius: 10px;
+}
+
+.stats {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 15px 0;
+}
+
+.stat {
+    width: 80px;
+    text-align: center;
+    background: #9CACB4;
+    padding: 5px;
+    border: 1px solid;
+    border-color: black;
+    border-radius: 6px;
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.5);
+}
+
+.stat-name {
+    font-weight: bold;
+    font-family: Helvetica;
+    font-size: 24px;
+}
+
+ul {
+    list-style-type: square;
+    margin-left: 20px;
+}
+
+.list-line {
+  border-bottom: 1px solid black;
+  padding: 30px 0 0 0;
+}
+
+h2 {
+  padding: 35px 0 0 0;
+}
+
+
