Changes race, class, name, and stat-roll pages to save values to a text file when submitted.

--- a/Templates/character.html
+++ b/Templates/character.html
@@ -12,7 +12,7 @@
         <div class="stats">
             {% for stat, value in character.stats.items() %}
                 <div class="stat">
-                    <span class="stat-name">{{ stat }}</span>
+                    <span class="stat-name">{{ stat }}</span><br/>
                     <span class="stat-value">{{ value }}</span>
                 </div>
             {% endfor %}
