--- a/Templates/character.html
+++ b/Templates/character.html
@@ -4,13 +4,13 @@
 
 <h1>Character Sheet</h1>
 <div class="character-sheet">
-        <p class="list-line"><strong>Name:</strong> {{ character.name }}</p>
-        <p class="list-line"><strong>Race:</strong> {{ character.race }}</p>
-        <p class="list-line"><strong>Class:</strong> {{ character.class }}</p>
+        <p class="list-line"><strong>Name:</strong> {{ name }}</p>
+        <p class="list-line"><strong>Race:</strong> {{ race }}</p>
+        <p class="list-line"><strong>Class:</strong> {{ class_ }}</p>
 
         <h2>Ability Scores:</h2>
         <div class="stats">
-            {% for stat, value in character.stats.items() %}
+            {% for stat, value in stats.items() %}
                 <div class="stat">
                     <span class="stat-name">{{ stat }}</span><br/>
                     <span class="stat-value">{{ value }}</span>
