--- a/Templates/class.html
+++ b/Templates/class.html
@@ -8,7 +8,7 @@
             <span class="tooltiptext">Need More Information? Follow <a href="http://dndroll.wikidot.com/classes">this link</a> to learn more about the different classes.</span>
           </div>
           <h1>Select Your Class</h1>
-        <form id = 'radio-form' method="POST">
+        <form id = 'radio-form' method="POST" onsubmit="handleNextClick(event)">
             {% for class in classes %}
                 <div class="form-option">
                     <label>
@@ -34,6 +34,13 @@
             let text = "Are you sure you want to start over?\nAll your previous selections will be lost."
             if (confirm(text)) {
               window.location.href = "/";
+            }
+          }
+          function handleNextClick(event) {
+            const selected = document.querySelector('input[name="class"]:checked');
+            if (!selected) {
+              event.preventDefault();
+              alert("Please select a class before proceeding.");
             }
           }
          </script>
