--- a/Templates/character.html
+++ b/Templates/character.html
@@ -7,6 +7,7 @@
         <p class="list-line"><strong>Name:</strong> {{ name }}</p>
         <p class="list-line"><strong>Race:</strong> {{ race }}</p>
         <p class="list-line"><strong>Class:</strong> {{ class_ }}</p>
+        <p class="list-line"><strong>Traits:</strong> {{ traits }}</p>
 
         <h2>Ability Scores:</h2>
         <div class="stats">
